# autorani

./: .gitignore  a.bash  pyproject.toml  requirements.txt
aqa/: main.py
autorani/: crawler.py  main.py  state_store.py  testgen.py  utils.py
config/: settings.yaml
tests/: conftest.py
